--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,6 @@ plugins {
 
 android {
     compileSdkVersion 30
-    buildToolsVersion "30.0.3"
 
     defaultConfig {
         applicationId "br.com.concrete.composemovies"
@@ -41,16 +40,24 @@ android {
 }
 
 dependencies {
-
+    // Android X & Material
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
-    implementation "androidx.compose.ui:ui:$compose_version"
-    implementation "androidx.compose.material:material:$compose_version"
-    implementation "androidx.compose.ui:ui-tooling:$compose_version"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.0'
-    implementation 'androidx.activity:activity-compose:1.3.0-alpha02'
-    testImplementation 'junit:junit:4.+'
+
+    // Compose
+    implementation "androidx.compose.ui:ui:$compose_version"
+    implementation "androidx.compose.ui:ui-tooling:$compose_version"
+    implementation "androidx.compose.material:material:$compose_version"
+
+    // Compose integrations
+    implementation 'androidx.activity:activity-compose:1.3.0-alpha03'
+
+    // Unit test
+    testImplementation 'junit:junit:4.13.2'
+
+    // Instrumented tests
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
