--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,4 +1,4 @@
-name: Android CI
+name: Pre-merge checks
 
 on:
   push:
@@ -25,7 +25,6 @@ jobs:
         run: ./gradlew assembleDebug
 
   test:
-    needs: build
     runs-on: macOS-latest
     timeout-minutes: 30
     strategy:
